[gd_scene load_steps=7 format=3 uid="uid://wge1ujom1m24"]

[ext_resource type="Script" uid="uid://kx1qefdojlef" path="res://scenes/binder/add_worker_to_capacity_page.gd" id="1_q4qy8"]
[ext_resource type="Texture2D" uid="uid://d355ftby527bc" path="res://assets/proto/paper.png" id="2_2mqqt"]
[ext_resource type="PackedScene" uid="uid://ctp3y23im581d" path="res://scenes/grids/workers/worker_overview_grid.tscn" id="3_8k224"]
[ext_resource type="PackedScene" uid="uid://bt6ns88810b87" path="res://scenes/grids/workers/worker_data_row.tscn" id="4_q4qy8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ktw"]
atlas = ExtResource("2_2mqqt")
region = Rect2(0, 0, 264, 277)

[sub_resource type="SpriteFrames" id="SpriteFrames_evvlh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ktw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="AddWorkerToCapacityPage" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(4.656634, 4.6512938)
script = ExtResource("1_q4qy8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(66, 69.25)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_evvlh")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 3.865453
offset_top = 104.917046
offset_right = 21.865454
offset_bottom = 135.91705
text = "<"

[node name="WorkerOverviewGrid" parent="." instance=ExtResource("3_8k224")]
layout_mode = 0
offset_left = 12.670095
offset_top = 12.684644
offset_right = 391.29877
offset_bottom = 354.39902
scale = Vector2(0.27062082, 0.3087139)
worker_row_packed_scene = ExtResource("4_q4qy8")

[connection signal="button_up" from="BackButton" to="." method="_on_back_button_button_up"]
[connection signal="on_details_button_pressed" from="WorkerOverviewGrid" to="." method="_on_worker_overview_grid_on_details_button_pressed"]
